added on-demand --enable-native-access for loading shared libraries